# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /auth
 definitions:
   struct_test.AdminAcc:
     description: struct for getting the credentials
@@ -24,7 +25,57 @@ info:
   title: Log In System
   version: 1.16.2
 paths:
-  /auth/signup:
+  /{id}:
+    post:
+      description: Gather the specific data that user wants
+      operationId: Parameter ID
+      parameters:
+      - description: Fetch Success
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/struct_test.AdminAcc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: "ok\"\t\"返回用户信息"
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Fecth the data
+      tags:
+      - Parameter
+  /login:
+    post:
+      description: The user will log in the data here
+      operationId: log in UI
+      parameters:
+      - description: Login
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/struct_test.AdminAcc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: "ok\"\t\"返回用户信息"
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Login the user and fetch the data
+      tags:
+      - Log in
+  /signup:
     post:
       consumes:
       - application/json
